--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://jacksonmeade.github.io/NCTSA/Home" />
+  <meta http-equiv="refresh" content="0; url=https://jacksonmeade.github.io/Vote/Home" />
 </head>
 </html>
