--- a/Home.html
+++ b/Home.html
@@ -125,10 +125,16 @@
                     <p class="custom-text custom-fonts-style display-7">From coding <strong>this website</strong> from scratch to building a student community on NCSSM's Campus already, my actions will be thorough and my goals will be clear.</p>
                 </div>
             </div>
-
-
         </div>
+        <br>
+        <br>
+        <br>
+        <span class="display-5"><strong>My Platform</strong></span><br>
+        I have seen the kind of power that creating a group around a set of humorous ideas has within all of you. You, the student body, have created a culture rarely found anywhere else that promotes acceptance with a touch of nerdy sarcasm. I want to make sure that that kind of community is able to reach those students studying with us online and at home. I want to enable more activities like the ones I've created with my hall (a Smash Tournament and the Gregarian Federational Construct) to bring people together with more than just "speed friending."
+        <br><br>
+When I came to Science and Math on Welcome Day, I almost decided not to accept. The buildings, imposing and old against the grey sky, did not show the kind of warmth our school has to offer. It occurred to me that giving Beall and Reynolds a good power wash might help with that, and with your support, I can create programs that would cover something so superficial yet extremely important. I want to create more beautification committees in student government to keep Watts Hospital looking as new as its rising little sibling, the Morganton Campus.
     </div>
+
 </section>
 <div class="container-fluid">
   <div class="row"style="padding:0px !important">
@@ -143,13 +149,20 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center custom-bold custom-white pb-3 custom-fonts-style display-2"><span style="font-weight: normal;">2018-2019 NCTSA Back to School Packet</span></h2>
+                <h2 class="align-center custom-bold custom-white pb-3 custom-fonts-style display-2"><span style="font-weight: normal;">A Little About Me</span></h2>
 
                 <p class="custom-text align-center custom-white pb-3 custom-fonts-style display-7">
-                    Download the 2018-2019 Back to School Packet for NCTSA. This year, we will be celebrating 40 years. As we model the way, we hope that you will work with your students to foster involvement at the local, state and national level. Research shows that student involvement in TSA is linked to successful programs and impacts future career choices. We have a team of advisors here to help you and support your students as they start a chapter. All you need to do is reach out to us.
+                  Hi. My name is Jackson Meade, and I attend the North Carolina School of Science and Mathematics, and I'm running for Junior Senator.
+                  <br><br>
+                  <strong>But who am I beneath that line?</strong>
+                  <br><br>
+                  I'm from Charlotte, North Carolina. Like the Triangle, it's a big place, and I hadn't met anyone in North Carolina outside of Charlotte (excluding family) because of it. In my first year of High School, I joined a chapter of the Technology Student Association. It allowed me to meet people from all over the state, and it was great to find so many like-minded people from places I hadn't ever heard of. That's mostly what drew me to Science and Math: <strong>You.</strong>
+                  <br>
+                  <br>
+                  I have a brother, Cavan (pictured behind), who is two years younger than I am. I've always had to be a leader, though I haven't always lived up to it. But nobody's perfect, and being an older brother has taught me many invaluable lessons about resolving conflicts and modeling the way forward.
+                  <br><br>
+                  <strong>I'm most uneasy when I'm idle</strong>. You'll usually find me doing something, from drawing (though I can't boast wonderful technique) to coding. I hope I can apply that restlessness to some change at Science and Math with your support.
                 </p>
-                <div class="custom-section-btn align-center"><a class="btn btn-primary display-4" href="https://official.com"><span class="customi-download custom-iconfont custom-iconfont-btn"></span>DOWNLOAD PACKET</a>
-                    <a class="btn btn-white-outline display-4" href="https://official.com"><span class="customi-arrow-next custom-iconfont custom-iconfont-btn"></span>OLDER NEWS</a></div>
             </div>
         </div>
     </div>
@@ -164,16 +177,17 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center custom-bold custom-white pb-3 custom-fonts-style display-2"><span style="font-weight: normal;">What is TSA?</span></h2>
+                <h2 class="align-center custom-bold custom-white pb-3 custom-fonts-style display-2"><span style="font-weight: normal;">Leadership Experience</span></h2>
 
-                <p class="custom-text align-center custom-white pb-3 custom-fonts-style display-7">The Technology Student Association is a non-profit national student organization devoted to teaching technology education to young people. TSA’s mission is to inspire its student members to prepare for careers in a technology-driven economy and culture. The demand for technological expertise is escalating in American industry. Therefore, TSA’s teachers strive to promote technological literacy, leadership, and problem solving to their student membership.
-
-                <br>
-                <br>Students are challenged to use and improve their STEM skills in both team and individual events in such areas as: communication; design and engineering; environmental systems; transportation; and manufacturing/construction.</p>
-
-                <div class="custom-section-btn align-center"><a class="btn btn-primary display-4" href="https://official.com"><span class="customi-info custom-iconfont custom-iconfont-btn"></span>LEARN MORE</a>
-                    <a class="btn btn-white-outline display-4" href="https://official.com"><span class="customi-edit custom-iconfont custom-iconfont-btn"></span>JOIN TSA</a></div>
-</div>
+                <p class="custom-text align-center custom-white pb-3 custom-fonts-style display-7">
+                  As soon as I started High School in 2016, I joined the Student Council. I served as Freshmen Body President for South Mecklenburg High School, where I learned how to lead a school while holding a lower-class position. As a Junior, I want to make just as much of an impact as the senior senators, and I have the experience to make that happen.
+                  <br>
+                  <br>
+                  While at South Meck, I served as President of my Technology Student Association Chapter, and led our team to a first-place win at the State Competition and a fourth-place win at the National Competition. TSA Stresses leadership, and I attended leadership seminars that drilled Robert's Rules of Order into me. I can hold a parliamentary session, as we do here at Science and Math.
+                  <br>
+                  <br>
+                  I served on a diversity board at my home high school, where I learned the importance of creating a diverse leadership board. Make sure to consider how you can elect a diverse senate, as I have found that a diverse board is often extremely effective in the most stressful areas.
+                </div>
             </div>
         </div>
       </section>
