--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="../../../assets/images/logo-542x210.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/logo-542x210.png" type="image/x-icon">
   <meta name="description" content="">
   <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/official-icons-bold/official-icons-bold.css">
@@ -38,7 +38,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://official.com">
+                    <a href="#header9-2">
                          <img src="assets/images/logo-542x210.png" alt="official" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -47,18 +47,18 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link display-4" href="https://official.com">
+                    <a class="nav-link link display-4" href="#content5-c">
 
                         About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link display-4" href="https://official.com">
+                    <a class="nav-link link display-4" href="#timeline2-d">
 
                         Strategic Plan</a>
-                </li><li class="nav-item"><a class="nav-link link display-4" href="https://official.com">
+                </li><li class="nav-item"><a class="nav-link link display-4" href="#content5-i">
 
                         Experience</a></li></ul>
-            <div class="navbar-buttons custom-section-btn"><a class="btn btn-sm btn-warning display-4" href="https://official.com">
+            <div class="navbar-buttons custom-section-btn"><a class="btn btn-sm btn-warning display-4" href="#form1-t">
 
                     Contact Me</a></div>
         </div>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 custom-fonts-style display-5">Dedication to my <strong>Work</strong></h4>
-                    <p class="custom-text custom-fonts-style display-7">From coding <strong>this website</strong> from scratch to building a student community on NCSSM's Campus already, my actions will be thorough and my goals will be clear.</p>
+                    <p class="custom-text custom-fonts-style display-7">From coding most of <strong>this website</strong> to building a student community on NCSSM's Campus already, my actions will be thorough and my goals will be clear.</p>
                 </div>
             </div>
         </div>
@@ -191,7 +191,6 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
             </div>
         </div>
       </section>
-
       <section class="custom-section form1 cid-r3QLMLl5AB" id="form1-t">
 
 
@@ -210,10 +209,9 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
           <div class="container">
               <div class="row justify-content-center">
                   <div class="media-container-column col-lg-8" data-form-type="formoid">
+                          <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
 
-
-                          <form class="custom-form" action="https://mobirise.com/" method="post">
-                            <input type="hidden" name="email" data-form-email="true" value="GhtBK3p/2FKjsyNVsSsjJOoZodCumXzuk59tz7Obq806mTfGdlcqAFdpWLzjEwfyxKpgNBnPKVwmQ1aGzRAatk74e6HaZAcGks0ruKdqBZJTgutpfhIR9PW2UdNB/52D" data-form-field="Email">
+                          <form class="custom-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nly0s4oRYbdobIfjZiezH60PXOmCwBo6HXaFeFxw3pXVhUcbueJJjcOhKHwHW/87IPSmUHu2YwKt+MqK/f9PVl+bdZy1MzFA0D85CZcSHKjW5mTBRbVblHbEnR4yTn7C" data-form-field="Email">
                               <div class="row row-sm-offset">
                                   <div class="col-md-4 multi-horizontal" data-for="name">
                                       <div class="form-group">
@@ -240,7 +238,6 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
               </div>
           </div>
       </section>
-
     </div>
 
 <section class="col-12 col-md-4 timeline2 cid-r3PWBNhg6j" id="timeline2-d">
@@ -384,6 +381,7 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
+    <script src="assets/formoid/formoid.min.js"></script>
 
 
 </body>
