--- a/Home.html
+++ b/Home.html
@@ -365,7 +365,7 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="custom-text mb-0 custom-fonts-style custom-white align-center display-7">Site Created by Jackson Meade for the Purpose of his Junior Senator Campaign</p>
+                <p class="custom-text mb-0 custom-fonts-style custom-white align-center display-7">Site Created by Jackson Meade for the Purpose of his Junior Senator Campaign. <br> <br> Thanks to Formoid, Mobirise, and GitHub Pages for making the creation process so easy.</p>
             </div>
         </div>
     </div>
