--- a/Home.html
+++ b/Home.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-542x210.png" type="image/x-icon">
-  <meta name="description" content="">
-  <title>Home</title>
+  <meta name="description" content="Jackson Meade's Junior Senator Campaign Website">
+  <title>Jackson Meade Campaign | Home</title>
   <link rel="stylesheet" href="assets/web/assets/official-icons-bold/official-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/official-icons/official-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
