--- a/Home.html
+++ b/Home.html
@@ -211,7 +211,7 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
                   <div class="media-container-column col-lg-8" data-form-type="formoid">
                           <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
 
-                          <form class="custom-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nly0s4oRYbdobIfjZiezH60PXOmCwBo6HXaFeFxw3pXVhUcbueJJjcOhKHwHW/87IPSmUHu2YwKt+MqK/f9PVl+bdZy1MzFA0D85CZcSHKjW5mTBRbVblHbEnR4yTn7C" data-form-field="Email">
+                          <form class="custom-form" action="https://official.com/" method="post" data-form-title="official Form"><input type="hidden" name="email" data-form-email="true" value="nly0s4oRYbdobIfjZiezH60PXOmCwBo6HXaFeFxw3pXVhUcbueJJjcOhKHwHW/87IPSmUHu2YwKt+MqK/f9PVl+bdZy1MzFA0D85CZcSHKjW5mTBRbVblHbEnR4yTn7C" data-form-field="Email">
                               <div class="row row-sm-offset">
                                   <div class="col-md-4 multi-horizontal" data-for="name">
                                       <div class="form-group">
@@ -235,6 +235,15 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
                               <span class="input-group-btn"><button href="" type="submit" class="btn btn-form btn-white-outline display-4">SEND</button></span>
                           </form>
                   </div>
+              </div>
+          </div>
+      </section>
+      <section class="carousel slide cid-r3SHeuf8N3" data-interval="false" id="slider2-u">
+
+
+          <div class="container content-slider">
+              <div class="content-slider-wrap">
+                  <div><div class="custom-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="false" data-interval="false"><ol class="carousel-indicators"><li data-app-prevent-settings="" data-target="#slider2-u" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider2-u" class="" data-slide-to="1"></li></ol><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="https://www.youtube.com/watch?v=ATvy97bi5Vo"><div class="custom-overlay"></div><div class="custom-background-video-preview" style="background-size: cover; background-position: center center; background-image: url(&quot;https://img.youtube.com/vi/ATvy97bi5Vo/maxresdefault.jpg&quot;);"></div><div class="custom-background-video mb_YTPlayer isMuted" id="YTP_1537164968853"><div class="mbYTP_wrapper" id="wrapper_YTP_1537164968853" style="position: absolute; z-index: 0; min-width: 100%; min-height: 100%; left: 0px; top: 0px; overflow: hidden; opacity: 1; transition-property: opacity; transition-duration: 2000ms;"><iframe id="iframe_YTP_1537164968853" class="playerBox" style="position: absolute; z-index: 0; width: 712px; height: 400px; top: 0px; left: 0px; overflow: hidden; opacity: 1; user-select: none; margin-top: 0px; margin-left: -77px; max-width: initial; transition-property: opacity; transition-duration: 1000ms;" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/ATvy97bi5Vo?modestbranding=1&amp;autoplay=0&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1&amp;version=3&amp;playerapiid=iframe_YTP_1537164968853&amp;origin=*&amp;allowfullscreen=true&amp;wmode=transparent&amp;iv_load_policy=3&amp;html5=1&amp;widgetid=1" unselectable="on"></iframe><div class="YTPOverlay" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 0.5; background-color: rgb(0, 0, 0);"></div></div></div><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/1.jpg" style="opacity: 0;"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="custom-fonts-style display-2">Campaign Video 2</h2><p class="lead custom-text custom-fonts-style display-7">Inspired by the A-Team Intro, I though you all would like this one.</p><div class="custom-section-btn" buttons="0"><a class="btn btn-success display-4" href="https://www.youtube.com/watch?v=ATvy97bi5Vo" target="_blank">OPEN IN NEW TAB</a> </div></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="https://www.youtube.com/watch?v=SmauRz1U9RA"><div class="custom-overlay"></div><div class="custom-background-video-preview" style="background-size: cover; background-position: center center; background-image: url(&quot;https://img.youtube.com/vi/SmauRz1U9RA/maxresdefault.jpg&quot;);"></div><div class="custom-background-video mb_YTPlayer isMuted" id="YTP_1537164968867"><div class="mbYTP_wrapper" id="wrapper_YTP_1537164968867" style="position: absolute; z-index: 0; min-width: 100%; min-height: 100%; left: 0px; top: 0px; overflow: hidden; opacity: 1; transition-property: opacity; transition-duration: 2000ms;"><iframe id="iframe_YTP_1537164968867" class="playerBox" style="position: absolute; z-index: 0; width: 0px; height: 0px; top: 0px; left: 0px; overflow: hidden; opacity: 1; user-select: none; margin-top: 0px; margin-left: 0px; max-width: initial; transition-property: opacity; transition-duration: 1000ms;" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/SmauRz1U9RA?modestbranding=1&amp;autoplay=0&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1&amp;version=3&amp;playerapiid=iframe_YTP_1537164968867&amp;origin=*&amp;allowfullscreen=true&amp;wmode=transparent&amp;iv_load_policy=3&amp;html5=1&amp;widgetid=2" unselectable="on"></iframe><div class="YTPOverlay" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 0.5; background-color: rgb(0, 0, 0);"></div></div></div><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/2.jpg" style="opacity: 0;"><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="custom-fonts-style display-2">Campaign Video 1</h2><p class="lead custom-text custom-fonts-style display-7">My more serious message to you all.</p><div class="custom-section-btn" buttons="0"><a class="btn btn-primary display-4" href="https://www.youtube.com/watch?v=SmauRz1U9RA" target="_blank">OPEN IN NEW TAB</a> </div></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider2-u"><span aria-hidden="true" class="customi-left custom-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider2-u"><span aria-hidden="true" class="customi-right custom-iconfont"></span><span class="sr-only">Next</span></a></div></div>
               </div>
           </div>
       </section>
@@ -335,6 +344,7 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
 </div>
 </div>
 
+
 <section once="" class="cid-r3QLcFwU88" id="footer7-r">
 
 
@@ -365,7 +375,7 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="custom-text mb-0 custom-fonts-style custom-white align-center display-7">Site Created by Jackson Meade for the Purpose of his Junior Senator Campaign. <br> <br> Thanks to Formoid, Mobirise, and GitHub Pages for making the creation process so easy.</p>
+                <p class="custom-text mb-0 custom-fonts-style custom-white align-center display-7">Site Created by Jackson Meade for the Purpose of his Junior Senator Campaign. <br> <br> Thanks to Formoid, official, and GitHub Pages for making the creation process so easy.</p>
             </div>
         </div>
     </div>
@@ -380,8 +390,12 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+    <script src="assets/slidervideo/script.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
     <script src="assets/formoid/formoid.min.js"></script>
+      <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
 
 
 </body>
