--- a/Home.html
+++ b/Home.html
@@ -202,7 +202,7 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
                       <h2 class="custom-section-title align-center pb-3 custom-fonts-style display-2"><strong>
                           CONTACT ME</strong></h2>
                       <h3 class="custom-section-subtitle align-center custom-light pb-3 custom-fonts-style display-5">
-                          Don't hesitate to ask any questions you may have</h3>
+                          Don't hesitate to ask any questions you may have. If you want a more immediate response, message me via FaceBook.</h3>
                   </div>
               </div>
           </div>
@@ -211,12 +211,12 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
                   <div class="media-container-column col-lg-8" data-form-type="formoid">
                           <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
 
-                          <form class="custom-form" action="https://official.com/" method="post" data-form-title="official Form"><input type="hidden" name="email" data-form-email="true" value="nly0s4oRYbdobIfjZiezH60PXOmCwBo6HXaFeFxw3pXVhUcbueJJjcOhKHwHW/87IPSmUHu2YwKt+MqK/f9PVl+bdZy1MzFA0D85CZcSHKjW5mTBRbVblHbEnR4yTn7C" data-form-field="Email">
-                              <div class="row row-sm-offset">
-                                  <div class="col-md-4 multi-horizontal" data-for="name">
+                          <form class="custom-form" action="https://f.formoid.net/196I" method="post">
+                            <div class="row row-sm-offset">
+                                  <div class="col-md-4 multi-horizontal" data-for="input">
                                       <div class="form-group">
                                           <label class="form-control-label custom-fonts-style display-7" for="name-form1-t">Name</label>
-                                          <input type="text" class="form-control" name="name" data-form-field="Name" required="" id="name-form1-t">
+                                          <input type="text" class="form-control" name="input" data-form-field="Name" required="" id="name-form1-t">
                                       </div>
                                   </div>
                                   <div class="col-md-4 multi-horizontal" data-for="email">
@@ -227,9 +227,9 @@ When I came to Science and Math on Welcome Day, I almost decided not to accept. 
                                   </div>
 
                               </div>
-                              <div class="form-group" data-for="message">
+                              <div class="form-group" data-for="textarea">
                                   <label class="form-control-label custom-fonts-style display-7" for="message-form1-t">Message</label>
-                                  <textarea type="text" class="form-control" name="message" rows="7" data-form-field="Message" id="message-form1-t"></textarea>
+                                  <textarea type="text" class="form-control" name="textarea" rows="7" data-form-field="Message" id="message-form1-t"></textarea>
                               </div>
 
                               <span class="input-group-btn"><button href="" type="submit" class="btn btn-form btn-white-outline display-4">SEND</button></span>
