--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-542x211.png" type="image/x-icon">
   <meta name="description" content="Jackson Meade's Junior Senator Campaign Website">
-  <title>Jackson Meade Campaign | Home</title>
+  <title>Cavan Meade Campaign | Home</title>
   <link rel="stylesheet" href="assets/web/assets/official-icons-bold/official-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/official-icons/official-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -51,11 +51,7 @@
 
                         About Me</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link link display-4" href="#timeline2-d">
-
-                        Strategic Plan</a>
-                </li><li class="nav-item"><a class="nav-link link display-4" href="#content5-i">
+                <li class="nav-item"><a class="nav-link link display-4" href="#content5-i">
 
                         Experience</a></li></ul>
             <div class="navbar-buttons custom-section-btn"><a class="btn btn-sm btn-warning display-4" href="#form1-t">
@@ -75,10 +71,10 @@
     <div class="container">
         <div class="media-container-column custom-white col-md-8">
             <h1 class="custom-section-title align-left custom-bold pb-3 custom-fonts-style display-1">
-                JACKSON MEADE</h1>
+                CAVAN MEADE</h1>
 
             <p class="custom-text align-left pb-3 custom-fonts-style display-5">
-                <strong>For Junior Senator</strong><br><br>Welcome to the campaign website for Jackson Meade! Thanks for stopping by, I'm glad you're here.</p>
+                <strong>For Freshmen Council President</strong><br><br>Welcome to the campaign website for Cavan Meade! Thanks for stopping by, I'm glad you're here.</p>
 
         </div>
     </div>
@@ -126,13 +122,6 @@
                 </div>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <span class="display-5"><strong>My Platform</strong></span><br>
-        I have seen the kind of power that creating a group around a set of humorous ideas has within all of you. You, the student body, have created a culture rarely found anywhere else that promotes acceptance with a touch of nerdy sarcasm. I want to make sure that that kind of community is able to reach those students studying with us online and at home. I want to enable more activities like the ones I've created with my hall (a Smash Tournament and the Gregarian Federational Construct) to bring people together with more than just "speed friending."
-        <br><br>
-When I came to Science and Math on Welcome Day, I almost decided not to accept. The buildings, imposing and old against the grey sky, did not show the kind of warmth our school has to offer. It occurred to me that giving Beall and Reynolds a good power wash might help with that, and with your support, I can create programs that would cover something so superficial yet extremely important. I want to create more beautification committees in student government to keep Watts Hospital looking as new as its rising little sibling, the Morganton Campus.
     </div>
 
 </section>
