--- a/Home.html
+++ b/Home.html
@@ -108,7 +108,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 custom-fonts-style display-5">
                       Investment in my <strong>Community</strong></h4>
-                    <p class="custom-text custom-fonts-style display-7">I was born and raised in Charlotte, North Carolina. I have grown to love and appreciate this wonderful community, and thus have been dedicated my whole life to improving it the most I can. As an elected representative, I would continue to work towards the benefit of the community.</p>
+                    <p class="custom-text custom-fonts-style display-7">I have lived in Charlotte my whole life. I have grown to love and appreciate this wonderful community, and thus have been dedicated my whole life to improving it the most I can. As an elected representative, I would continue to work towards the benefit of the community.</p>
                 </div>
             </div>
 
@@ -146,7 +146,7 @@
                 Outside of school, I stay active with Tae Kwon Do. As a black belt, it is my job to help and (hopefully) inspire younger ranks. I help judge competitions, and work with the younger students to improve their skills as martial artists. I attend Tae Kwon Do multiple times a week, showing my constant dedication to this leadership role.
                   <br>
                   <br>
-                 I also participate in Musical Theatre. This is something I have been doing my whole life, and I enjoy both working as a cast member, and as a director. I enjoy performing, but my favorite part of theatre – what draws me to it – is the people. From the shows I have performed in, I have learned the most valuable part of success is the community – the cast. This is something I apply to my everyday life, striving to build a public sphere of support, to create that “cast” of people, who together can make the show, the community and our school a better place.
+                 I also participate in Musical Theatre. This is something I have been doing my whole life, and I enjoy both working as a cast member, and as a director. I enjoy performing, but my favorite part of theatre – what draws me to it – is the people. From the shows I have performed in, I have learned the most valuable part of success is the community – the cast. This is something I apply to my everyday life, striving to build a public sphere of support, to create that “cast” of people, who together can make the community - the show - and our school a better place.
                   <br><br>
                   I have an older brother (pictured behind) who has led me throughout my life. That said, I have led him too. As the younger one, I often felt overshadowed by my brother’s successes. I felt I needed to prove to everyone that I was just as good. However, through the years I came to learn that I didn’t need to be like him, I needed to be myself. And that is who I am. I am not afraid to accept challenges that seem beyond me, and I work everyday to show this. Despite being the younger brother, I helped my sibling when he needed it, trying to look at whatever problem through a different lens, my lens. I hope, with your support, that I can be the lens this school needs.
                 </p>
