--- a/Home.html
+++ b/Home.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 custom-fonts-style display-5">Dedication to my <strong>Work</strong></h4>
-                    <p class="custom-text custom-fonts-style display-7">As a black belt in Tae Kwon Do, I am committed to doing my best in every aspect of my work. Whether it be physical, in my training, or mental, in my academics, I never quit on my goals.  </p>
+                    <p class="custom-text custom-fonts-style display-7">As a student in Tae Kwon Do, I am committed to doing my best in every aspect of my work. Whether it be physical, in my training, or mental, in my academics, I never quit on my goals.  </p>
                 </div>
             </div>
         </div>
